--- a/BOJ/BOJ/BOJ.vcxproj
+++ b/BOJ/BOJ/BOJ.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1000.cpp" />
+    <ClCompile Include="1001.cpp" />
+    <ClCompile Include="1002.cpp" />
+    <ClCompile Include="1003.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
