--- a/BOJ/BOJ/BOJ.vcxproj
+++ b/BOJ/BOJ/BOJ.vcxproj
@@ -143,6 +143,74 @@
     <ClCompile Include="1001.cpp" />
     <ClCompile Include="1002.cpp" />
     <ClCompile Include="1003.cpp" />
+    <ClCompile Include="1008.cpp" />
+    <ClCompile Include="1011.cpp" />
+    <ClCompile Include="1010.cpp" />
+    <ClCompile Include="1012.cpp" />
+    <ClCompile Include="1018.cpp" />
+    <ClCompile Include="1019.cpp" />
+    <ClCompile Include="1037.cpp" />
+    <ClCompile Include="1041.cpp" />
+    <ClCompile Include="1065.cpp" />
+    <ClCompile Include="1080.cpp" />
+    <ClCompile Include="1085.cpp" />
+    <ClCompile Include="1110.cpp" />
+    <ClCompile Include="1149.cpp" />
+    <ClCompile Include="1152.cpp" />
+    <ClCompile Include="1157.cpp" />
+    <ClCompile Include="1181.cpp" />
+    <ClCompile Include="1193.cpp" />
+    <ClCompile Include="1197.cpp" />
+    <ClCompile Include="1202.cpp" />
+    <ClCompile Include="1260.cpp" />
+    <ClCompile Include="1546.cpp" />
+    <ClCompile Include="1629.cpp" />
+    <ClCompile Include="1654.cpp" />
+    <ClCompile Include="1676.cpp" />
+    <ClCompile Include="1697.cpp" />
+    <ClCompile Include="1712.cpp" />
+    <ClCompile Include="1717.cpp" />
+    <ClCompile Include="1929.cpp" />
+    <ClCompile Include="1931.cpp" />
+    <ClCompile Include="1932.cpp" />
+    <ClCompile Include="1300.cpp" />
+    <ClCompile Include="1316.cpp" />
+    <ClCompile Include="1330.cpp" />
+    <ClCompile Include="1427.cpp" />
+    <ClCompile Include="1436.cpp" />
+    <ClCompile Include="1463.cpp" />
+    <ClCompile Include="1520.cpp" />
+    <ClCompile Include="1541.cpp" />
+    <ClCompile Include="1753.cpp" />
+    <ClCompile Include="1774.cpp" />
+    <ClCompile Include="1780.cpp" />
+    <ClCompile Include="1781.cpp" />
+    <ClCompile Include="1826.cpp" />
+    <ClCompile Include="1904.cpp" />
+    <ClCompile Include="1912.cpp" />
+    <ClCompile Include="1920.cpp" />
+    <ClCompile Include="1946.cpp" />
+    <ClCompile Include="1976.cpp" />
+    <ClCompile Include="1978.cpp" />
+    <ClCompile Include="2293.cpp" />
+    <ClCompile Include="2357.cpp" />
+    <ClCompile Include="2437.cpp" />
+    <ClCompile Include="2438.cpp" />
+    <ClCompile Include="2439.cpp" />
+    <ClCompile Include="2446.cpp" />
+    <ClCompile Include="2447.cpp" />
+    <ClCompile Include="2523.cpp" />
+    <ClCompile Include="2557.cpp" />
+    <ClCompile Include="2558.cpp" />
+    <ClCompile Include="1992.cpp" />
+    <ClCompile Include="2004.cpp" />
+    <ClCompile Include="2108.cpp" />
+    <ClCompile Include="2110.cpp" />
+    <ClCompile Include="2156.cpp" />
+    <ClCompile Include="2231.cpp" />
+    <ClCompile Include="2252.cpp" />
+    <ClCompile Include="2292.cpp" />
+    <ClCompile Include="2562.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
