--- a/BOJ/BOJ/BOJ.vcxproj
+++ b/BOJ/BOJ/BOJ.vcxproj
@@ -211,6 +211,99 @@
     <ClCompile Include="2252.cpp" />
     <ClCompile Include="2292.cpp" />
     <ClCompile Include="2562.cpp" />
+    <ClCompile Include="2565.cpp" />
+    <ClCompile Include="2577.cpp" />
+    <ClCompile Include="2675.cpp" />
+    <ClCompile Include="2739.cpp" />
+    <ClCompile Include="2741.cpp" />
+    <ClCompile Include="2742.cpp" />
+    <ClCompile Include="2748.cpp" />
+    <ClCompile Include="2750.cpp" />
+    <ClCompile Include="2751.cpp" />
+    <ClCompile Include="2753.cpp" />
+    <ClCompile Include="2775.cpp" />
+    <ClCompile Include="2798.cpp" />
+    <ClCompile Include="2579.cpp" />
+    <ClCompile Include="2805.cpp" />
+    <ClCompile Include="2839.cpp" />
+    <ClCompile Include="2580.cpp" />
+    <ClCompile Include="2581.cpp" />
+    <ClCompile Include="2588.cpp" />
+    <ClCompile Include="2606.cpp" />
+    <ClCompile Include="2609.cpp" />
+    <ClCompile Include="2630.cpp" />
+    <ClCompile Include="2667.cpp" />
+    <ClCompile Include="2869.cpp" />
+    <ClCompile Include="2884.cpp" />
+    <ClCompile Include="3190.cpp" />
+    <ClCompile Include="4153.cpp" />
+    <ClCompile Include="4344.cpp" />
+    <ClCompile Include="4386.cpp" />
+    <ClCompile Include="4673.cpp" />
+    <ClCompile Include="4948.cpp" />
+    <ClCompile Include="4963.cpp" />
+    <ClCompile Include="5086.cpp" />
+    <ClCompile Include="5543.cpp" />
+    <ClCompile Include="5567.cpp" />
+    <ClCompile Include="2887.cpp" />
+    <ClCompile Include="5622.cpp" />
+    <ClCompile Include="7568.cpp" />
+    <ClCompile Include="7576.cpp" />
+    <ClCompile Include="8393.cpp" />
+    <ClCompile Include="8958.cpp" />
+    <ClCompile Include="9020.cpp" />
+    <ClCompile Include="9095.cpp" />
+    <ClCompile Include="9372.cpp" />
+    <ClCompile Include="10423.cpp" />
+    <ClCompile Include="10430.cpp" />
+    <ClCompile Include="10718.cpp" />
+    <ClCompile Include="10773.cpp" />
+    <ClCompile Include="10775.cpp" />
+    <ClCompile Include="10809.cpp" />
+    <ClCompile Include="10814.cpp" />
+    <ClCompile Include="10816.cpp" />
+    <ClCompile Include="10817.cpp" />
+    <ClCompile Include="10818.cpp" />
+    <ClCompile Include="9375.cpp" />
+    <ClCompile Include="소스.cpp" />
+    <ClCompile Include="소스1.cpp" />
+    <ClCompile Include="소스10.cpp" />
+    <ClCompile Include="소스11.cpp" />
+    <ClCompile Include="소스12.cpp" />
+    <ClCompile Include="소스13.cpp" />
+    <ClCompile Include="소스14.cpp" />
+    <ClCompile Include="소스15.cpp" />
+    <ClCompile Include="소스16.cpp" />
+    <ClCompile Include="소스17.cpp" />
+    <ClCompile Include="소스18.cpp" />
+    <ClCompile Include="소스19.cpp" />
+    <ClCompile Include="소스2.cpp" />
+    <ClCompile Include="소스20.cpp" />
+    <ClCompile Include="소스21.cpp" />
+    <ClCompile Include="소스22.cpp" />
+    <ClCompile Include="소스26.cpp" />
+    <ClCompile Include="소스27.cpp" />
+    <ClCompile Include="2908.cpp" />
+    <ClCompile Include="2941.cpp" />
+    <ClCompile Include="2981.cpp" />
+    <ClCompile Include="3009.cpp" />
+    <ClCompile Include="3036.cpp" />
+    <ClCompile Include="3052.cpp" />
+    <ClCompile Include="3053.cpp" />
+    <ClCompile Include="9461.cpp" />
+    <ClCompile Include="9498.cpp" />
+    <ClCompile Include="9576.cpp" />
+    <ClCompile Include="9663.cpp" />
+    <ClCompile Include="10039.cpp" />
+    <ClCompile Include="10250.cpp" />
+    <ClCompile Include="10272.cpp" />
+    <ClCompile Include="소스3.cpp" />
+    <ClCompile Include="소스4.cpp" />
+    <ClCompile Include="소스5.cpp" />
+    <ClCompile Include="소스6.cpp" />
+    <ClCompile Include="소스7.cpp" />
+    <ClCompile Include="소스8.cpp" />
+    <ClCompile Include="소스9.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
