--- a/BOJ/BOJ/BOJ.vcxproj
+++ b/BOJ/BOJ/BOJ.vcxproj
@@ -265,24 +265,23 @@
     <ClCompile Include="10817.cpp" />
     <ClCompile Include="10818.cpp" />
     <ClCompile Include="9375.cpp" />
-    <ClCompile Include="소스.cpp" />
-    <ClCompile Include="소스1.cpp" />
-    <ClCompile Include="소스10.cpp" />
-    <ClCompile Include="소스11.cpp" />
-    <ClCompile Include="소스12.cpp" />
-    <ClCompile Include="소스13.cpp" />
-    <ClCompile Include="소스14.cpp" />
-    <ClCompile Include="소스15.cpp" />
-    <ClCompile Include="소스16.cpp" />
-    <ClCompile Include="소스17.cpp" />
-    <ClCompile Include="소스18.cpp" />
-    <ClCompile Include="소스19.cpp" />
-    <ClCompile Include="소스2.cpp" />
-    <ClCompile Include="소스20.cpp" />
-    <ClCompile Include="소스21.cpp" />
-    <ClCompile Include="소스22.cpp" />
-    <ClCompile Include="소스26.cpp" />
-    <ClCompile Include="소스27.cpp" />
+    <ClCompile Include="10828.cpp" />
+    <ClCompile Include="10830.cpp" />
+    <ClCompile Include="10952.cpp" />
+    <ClCompile Include="10953.cpp" />
+    <ClCompile Include="10989.cpp" />
+    <ClCompile Include="10996.cpp" />
+    <ClCompile Include="10998.cpp" />
+    <ClCompile Include="11021.cpp" />
+    <ClCompile Include="11022.cpp" />
+    <ClCompile Include="11047.cpp" />
+    <ClCompile Include="11049.cpp" />
+    <ClCompile Include="11050.cpp" />
+    <ClCompile Include="10844.cpp" />
+    <ClCompile Include="11051.cpp" />
+    <ClCompile Include="11053.cpp" />
+    <ClCompile Include="11054.cpp" />
+    <ClCompile Include="11399.cpp" />
     <ClCompile Include="2908.cpp" />
     <ClCompile Include="2941.cpp" />
     <ClCompile Include="2981.cpp" />
@@ -297,13 +296,72 @@
     <ClCompile Include="10039.cpp" />
     <ClCompile Include="10250.cpp" />
     <ClCompile Include="10272.cpp" />
-    <ClCompile Include="소스3.cpp" />
-    <ClCompile Include="소스4.cpp" />
-    <ClCompile Include="소스5.cpp" />
-    <ClCompile Include="소스6.cpp" />
-    <ClCompile Include="소스7.cpp" />
-    <ClCompile Include="소스8.cpp" />
-    <ClCompile Include="소스9.cpp" />
+    <ClCompile Include="10869.cpp" />
+    <ClCompile Include="10870.cpp" />
+    <ClCompile Include="10871.cpp" />
+    <ClCompile Include="10872.cpp" />
+    <ClCompile Include="10942.cpp" />
+    <ClCompile Include="10950.cpp" />
+    <ClCompile Include="10951.cpp" />
+    <ClCompile Include="11404.cpp" />
+    <ClCompile Include="11505.cpp" />
+    <ClCompile Include="11729.cpp" />
+    <ClCompile Include="12015.cpp" />
+    <ClCompile Include="12100.cpp" />
+    <ClCompile Include="12865.cpp" />
+    <ClCompile Include="13458.cpp" />
+    <ClCompile Include="13460.cpp" />
+    <ClCompile Include="14427.cpp" />
+    <ClCompile Include="14499.cpp" />
+    <ClCompile Include="14500.cpp" />
+    <ClCompile Include="14501.cpp" />
+    <ClCompile Include="11650.cpp" />
+    <ClCompile Include="14502.cpp" />
+    <ClCompile Include="14503.cpp" />
+    <ClCompile Include="14681.cpp" />
+    <ClCompile Include="14688.cpp" />
+    <ClCompile Include="14889.cpp" />
+    <ClCompile Include="14890.cpp" />
+    <ClCompile Include="14891.cpp" />
+    <ClCompile Include="15552.cpp" />
+    <ClCompile Include="15596.cpp" />
+    <ClCompile Include="15649.cpp" />
+    <ClCompile Include="11651.cpp" />
+    <ClCompile Include="15650.cpp" />
+    <ClCompile Include="11653.cpp" />
+    <ClCompile Include="11654.cpp" />
+    <ClCompile Include="11659.cpp" />
+    <ClCompile Include="11720.cpp" />
+    <ClCompile Include="11723.cpp" />
+    <ClCompile Include="11725.cpp" />
+    <ClCompile Include="15651.cpp" />
+    <ClCompile Include="15652.cpp" />
+    <ClCompile Include="17135.cpp" />
+    <ClCompile Include="17140.cpp" />
+    <ClCompile Include="17143.cpp" />
+    <ClCompile Include="17144.cpp" />
+    <ClCompile Include="17300.cpp" />
+    <ClCompile Include="17362.cpp" />
+    <ClCompile Include="17363.cpp" />
+    <ClCompile Include="17508.cpp" />
+    <ClCompile Include="19236.cpp" />
+    <ClCompile Include="19237.cpp" />
+    <ClCompile Include="15654.cpp" />
+    <ClCompile Include="19532.cpp" />
+    <ClCompile Include="19535.cpp" />
+    <ClCompile Include="19538.cpp" />
+    <ClCompile Include="19572.cpp" />
+    <ClCompile Include="19575.cpp" />
+    <ClCompile Include="19576.cpp" />
+    <ClCompile Include="19582.cpp" />
+    <ClCompile Include="15655.cpp" />
+    <ClCompile Include="15685.cpp" />
+    <ClCompile Include="15686.cpp" />
+    <ClCompile Include="16189.cpp" />
+    <ClCompile Include="16234.cpp" />
+    <ClCompile Include="16637.cpp" />
+    <ClCompile Include="17070.cpp" />
+    <ClCompile Include="19584.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
